Joost/styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

@keyframes fade {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes slide {
    0% {
        transform: translateX(100%);
    }
}

* {
    box-sizing: border-box;
    font-family: "Inter", Arial, Helvetica, sans-serif;
}

body {
    background-color: #DCDCDC;
    margin: 1em;
}


/* Nav styles */
.navbar {
    top: 0;
    left: 0;
    right: 0;
    background-color: #CBCBCB;
    padding: 10px 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-radius: 15px;
    font-family: helvetica;
    border: 1px #bfbfbf solid;
}

.navbar-logo {
    font-size: 1em;
    font-weight: 500;
    color: #202020;

    @media screen and (min-width: 475px) {
        font-size: 2em;
    }
}

.navbar-menu {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
}

.navbar-item {
    margin-left: 20px;
}

.navbar-item a {
    text-decoration: none;
    color: #202020;
    font-size: 16px;
    transition: color 0.3s;
}

.navbar-item a:hover {
    text-decoration: underline;
}

/* Eerste onderdeel "Het Team" */
#het-team {
    text-align: center;
    font-weight: 400;
    text-decoration: underline;
    margin-top: 2em;
}

.section-one {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: 1fr;

    @media only screen and (min-width: 1050px){
        grid-template-columns: 1fr 1fr 1fr;
    }
}


/* Card styles */
.card {
    display: flex;
    background: #CBCBCB;
    border-radius: 10px;
    overflow: hidden;
    aspect-ratio: 4/2;
    width: 100%;
    position: relative;
    border: 1px #bfbfbf solid;
}

.card-image {
    margin: 15px;
    aspect-ratio: 1/1;
}

.in-view {
    animation: slide 0.3s 0.3s both;

    @media only screen and (min-width: 1050px) {
        animation: fade 0.3s 0.3s both;
    }

}

.out-of-view {
    opacity: 0;
}

.card-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    border-radius: 10px;
}

.card-content {
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end; /* Aligns content to the bottom */
    flex-grow: 1; /* Allows the content area to expand */
}

.name {
    margin: 0;
    font-size: 1.5em;
    font-weight: 400;
    color: #202020;
}

.button {
    margin-top: 10px;
    padding: 10px 20px;
    background-color: #F4F4F4;
    color: #202020;
    text-align: center;
    text-decoration: none;
    border-radius: 10px;
    font-size: 0.7em;
    transition: background-color 0.3s;
    border: 1px #cbcbcb solid;


    @media screen and (min-width: 475px) {
        font-size: 1em;
    }
}

.button:hover {
    background-color: #494949;
    cursor: pointer;
}


/* 2e Onderdeel "De Squad" */

#de-squad {
    text-align: center;
    font-weight: 400;
    margin-top: 2em;
}

.section-two {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: 1fr;

    @media only screen and (min-width: 1050px){
        grid-template-columns: 1fr 1fr 1fr;
    }
}

/* Footer styles */

footer {
    background-color: #CBCBCB;
    margin-top: 1em;
    border-radius: 10px;
    font-size: 1em;
    padding: 1em;
    border: 1px #bfbfbf solid;
}

footer h3 {
    font-weight: 600;
    text-decoration: underline;
}

footer p {
    line-height: 0.5em;
}

